# multiplicative_modular_inverse_algo_study

./: Cargo.toml  README.md  note
src/: lib.rs
tests/: bench.rs
