[package]
name = "modular_inversion_gcd_study"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = [ "software9119.technology" ]

[features]
extended-tests = []

[profile.bench]
opt-level = 3            
lto = "fat"
debug = false
split-debuginfo = 'off'
strip = "none"
debug-assertions = false
overflow-checks = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false
